name:                techiedelight
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/antonlogvinenko/techiedelight#readme
license:             MIT
license-file:        LICENSE
author:              Anton Logvinenko
maintainer:          anton.logvinenko@gmail.com
copyright:           2018 Anton Logvinenko
category:            Algorithms
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable techiedelight
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
